# machine-learning-zoomcamp-homeworks

./: pyproject.toml
01-intro/: homework.ipynb
