[tool.poetry]
name = "machine-learning-zoomcamp-homeworks"
version = "0.1.0"
description = ""
authors = ["Cristian Zapata <zapatacc@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
fsspec = "^2024.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
